<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:clickable="true">
	<ToggleButton android:id="@+id/vibrate"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textOn="@string/vibrON" android:textOff="@string/vibrOFF" />
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/LinearLayout01" android:layout_marginTop="8dip">
		<TextView android:text="@string/sens" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dip"></TextView>
		<EditText android:layout_height="wrap_content"
			android:layout_width="60px" android:text="@string/sensitivityval"
			android:id="@+id/sensitivity" android:numeric="integer" android:maxLines="1" android:inputType="number"></EditText>
		<TextView android:text="@string/noise" android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:text="@string/noiseval" android:id="@+id/noise"
			android:layout_width="60px" android:layout_height="wrap_content" android:numeric="integer" android:maxLines="1" android:inputType="number" android:layout_marginLeft="2dip"></EditText>
	<Button android:text="@string/set" android:id="@+id/setSens" android:layout_height="wrap_content" android:layout_width="fill_parent"></Button>
</LinearLayout>
<ToggleButton android:id="@+id/setCompcache"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textOn="@string/cmpon" android:textOff="@string/cmpoff" />
</LinearLayout>