<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
            android:title="Noise and sensitivity">
	<EditTextPreference 
		android:key="noise" 
		android:title="Set noise"
        android:summary="@string/noiseandsetsumm"
        android:numeric="integer"
        android:inputType="number"
		android:defaultValue="50"/>
	<EditTextPreference 
		android:key="sensitivity" 
		android:title="Set sensitivity"
        android:summary="@string/noiseandsetsumm"
        android:numeric="integer"
        android:inputType="number"
		android:defaultValue="25" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="Compcache settings">
        <CheckBoxPreference
                android:key="cc_run"
                android:title="Compcache ON/OFF"
                android:summary="compressed RAM" />
	<CheckBoxPreference
                android:key="cc_auto"
                android:title="Compcache autostart"
                android:summary="compcache will run at start" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="Other">
        <CheckBoxPreference
                android:key="hf"
                android:title="Haptic feedback"
                android:summary="softkey vibration" />
	<CheckBoxPreference
                android:key="ads_filter"
                android:title="Ads filter"
                android:summary="avoid ads banner" />
    </PreferenceCategory>
   	 <PreferenceCategory
   	 	android:title="About">
   		  <PreferenceScreen 
    		android:title="Info"
    		android:summary="Some info about the app">
    		<Preference
    			android:key="devs"
    			android:title="Developers"
    			android:summary="gnufabio and enrix835" />
    		<Preference
    			android:key="donate"
    			android:title="Click to donate"
    			android:summary="to allow us to add this app to the market" />
    		<Preference
    			android:key="follow"
    				android:title="Follow us"
    				android:summary="on the official thread at Liquid @ Modaco" />
    			<PreferenceCategory
    			android:title="Help">
    			<Preference
    				android:key="sens_help"
    				android:title="Sensitivity"
    				android:summary="@string/sens_help" />
    			<Preference
    				android:key="hf_help"
    				android:title="Haptic Feedback"
    				android:summary="@string/haptic_help" />
    			<Preference
    				android:key="compcache_help"
    				android:title="Compcache"
    				android:summary="@string/compcache_help" />
    			<Preference
    				android:key="ads_help"
    				android:title="Ads Filter"
    				android:summary="@string/ads_help" />
    		</PreferenceCategory>
    	</PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>